<resources>
    <string name="app_name">Smart Inventory</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user">USUARIO</string>
    <string name="lbl_user">Usuario</string>
    <string name="lbl_password">Password</string>
    <string name="login">Iniciar Sesión</string>
    <string name="splash">Control de Inventarios</string>
    <string name="stock">Cargar ZSTOCK</string>
    <string name="count_inventory">Contar Inventario</string>
    <string name="recount_inventory">Re - Contar Inventario </string>
    <string name="finish_counting">Finalizar Conteo</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="master_data">Cargar Datos Maestros</string>
    <string name="theoretical_inventory">Cargar Inventario Teórico</string>
    <string name="load_data">Cargar Datos</string>
    <string name="sku">SKU</string>
    <string name="search_by_sku">Código SKU:</string>
    <string name="search_by_name">Nombre SKU:</string>
    <string name="flavor">Sabor</string>
    <string name="presentation">Presentacion</string>
    <string name="boxes">Cajas</string>
    <string name="material">Fisico</string>
    <string name="count">Conteo</string>
    <string name="SKU">SKU</string>
    <string name="FLAVOR">SABOR:</string>
    <string name="PRESENTATION">PRESENTACION:</string>
    <string name="inventorycount">Conteo de Inventario</string>
    <string name="unknown_problem">Ocurrió un problema</string>
    <string name="valid_data">Digite un usuario válido</string>
    <string name="loading">Cargando…</string>
    <string name="no1">1</string>
    <string name="no2">2</string>
    <string name="no3">3</string>
    <string name="no4">4</string>
    <string name="no5">5</string>
    <string name="no6">6</string>
    <string name="no7">7</string>
    <string name="no8">8</string>
    <string name="no9">9</string>
    <string name="no0">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="divide">÷</string>
    <string name="times">×</string>
    <string name="equals">=</string>
    <string name="dot">.</string>
    <string name="clear">C</string>
    <string name="status">Estado</string>
    <string name="sync_data">Sincronizar Datos</string>
    <string name="finished_user">Usuario</string>
    <string name="platforms">Tarimas</string>
    <string name="giropalet">Giro Palet</string>
    <string name="separator">Separador</string>
    <string name="frames">Marcos</string>
    <string name="level">Nivel</string>
    <string name="location">Ubicación</string>
    <string name="date">Fecha</string>
    <string name="plastic_platforms">Tarimas Plasticas</string>
    <string name="wooden_platforms">Tarimas Madera</string>
    <string name="units">Unidades</string>
    <string name="material_group">GRUPO MATERIAL</string>
    <string name="material_name">NOMBRE MATERIAL</string>
    <string name="zero">0</string>
    <string name="due_date">Fecha de vencimiento</string>
    <string name="center_id">ID Centro</string>
    <string name="center_name">Nombre Centro</string>
    <string name="credentials">Credenciales incorrectas.</string>
    <string name="warehouse_id">ID almacén</string>
    <string name="warehouse_name">almacen Nombre</string>
    <string name="warehouse_location">Ubicación almacén</string>
    <string name="icon_description">icono</string>
    <string name="arrowdown">arrowdown</string>
    <string name="title_activity_logout_menu">LogoutMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="sync">Sincronizar</string>
    <string name="connection_error">Ocurrió un error con tu conexión</string>
    <string name="server_error">Ocurrió un problema con el servidor</string>
    <string name="credentals_error">Credenciales incorrectas</string>
    <string name="image">image</string>
    <string name="type_your_ansquer">Escriba la dirección</string>
    <string name="no_internet">Sin conexión a internet, los datos se guardarán para ser sincronizados.</string>
    <string name="logo">logo</string>
    <string name="sending_data">enviar</string>
    <string name="physical">Físico</string>
    <string name="theoretical">Teórico</string>
    <string name="difference">Diferencia</string>
    <string name="sku_name">Nombre SKU</string>
</resources>