<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.Count">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/sku_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/material_shape"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:text="@string/SKU"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/material_group"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/material_name"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sku_counted"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:text="@string/sku"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/flavor_counted"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/flavor"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/presentation_counted"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/presentation"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:background="#adb5bd">

                <TableLayout
                    style="@style/Theme.Smartinventoryandroid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="1dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/txt_numbers"
                            android:layout_width="0dp"
                            android:layout_height="42dp"
                            android:layout_marginStart="4dp"
                            android:layout_marginEnd="2dp"
                            android:layout_weight="3.2"
                            android:background="@color/white"
                            android:gravity="end"
                            android:text="@string/no0"
                            android:textColor="@color/gray"
                            android:textSize="27sp" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/clear_button"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="1dp"
                            android:layout_weight="1.1"
                            android:background="@drawable/ripple_effect_red"
                            android:textColor="@color/white"
                            android:text="@string/clear"
                            android:textSize="22sp" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/button7"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ripple_effect_gray"
                            android:layout_weight="1"
                            android:layout_margin="1dp"
                            android:text="@string/no7"
                            android:textSize="22sp" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/button8"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ripple_effect_gray"
                            android:layout_weight="1"
                            android:layout_margin="1dp"
                            android:text="@string/no8"
                            android:textSize="22sp" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/button9"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ripple_effect_gray"
                            android:layout_margin="1dp"
                            android:layout_weight="1"
                            android:text="@string/no9"
                            android:textSize="22sp" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/divide_button"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="1dp"
                            android:layout_weight="1"
                            android:background="@drawable/ripple_effect_yellow"
                            android:text="@string/divide"
                            android:textSize="22sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/button4"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ripple_effect_gray"
                            android:layout_margin="1dp"
                            android:layout_weight="1"
                            android:text="@string/no4"
                            android:textSize="22sp" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/button5"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ripple_effect_gray"
                            android:layout_margin="1dp"
                            android:layout_weight="1"
                            android:text="@string/no5"
                            android:textSize="22sp" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/button6"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ripple_effect_gray"
                            android:layout_margin="1dp"
                            android:layout_weight="1"
                            android:text="@string/no6"
                            android:textSize="22sp" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/times_button"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="1dp"
                            android:layout_weight="1"
                            android:background="@drawable/ripple_effect_yellow"
                            android:text="@string/times"
                            android:textSize="22sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/button1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ripple_effect_gray"
                            android:layout_margin="1dp"
                            android:layout_weight="1"
                            android:text="@string/no1"
                            android:textSize="22sp" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/button2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ripple_effect_gray"
                            android:layout_margin="1dp"
                            android:layout_weight="1"
                            android:text="@string/no2"
                            android:textSize="22sp" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/button3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ripple_effect_gray"
                            android:layout_margin="1dp"
                            android:layout_weight="1"
                            android:text="@string/no3"
                            android:textSize="22sp" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/minus_button"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="1dp"
                            android:layout_weight="1"
                            android:background="@drawable/ripple_effect_yellow"
                            android:text="@string/minus"
                            android:textSize="22sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/dot_button"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="1dp"
                            android:layout_weight="1"
                            android:background="@drawable/ripple_effect_gray"
                            android:text="@string/dot"
                            android:textSize="22sp" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/button0"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ripple_effect_gray"
                            android:layout_margin="1dp"
                            android:layout_weight="1"
                            android:text="@string/no0"
                            android:textSize="22sp" />


                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/equals_button"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="1dp"
                            android:layout_weight="1"
                            android:background="@drawable/ripple_effect_gray"
                            android:text="@string/equals"
                            android:textSize="22sp" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/plus_button"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="1dp"
                            android:layout_weight="1"
                            android:background="@drawable/ripple_effect_yellow"
                            android:text="@string/plus"
                            android:textSize="22sp" />
                    </TableRow>
                </TableLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/location"
                    android:textStyle="bold"
                    android:textSize="22sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_measurement_units"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" />

            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/send_data_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="40dp"
                android:src="@drawable/ic_send_count"
                android:layout_marginEnd="3dp"
                android:contentDescription="@string/sending_data" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/counted_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_counted_products"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>