<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.Login">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/cbc"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:layout_marginBottom="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="200dp"
        android:paddingRight="200dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/lbl_user"
        android:textColorHint="@android:color/black">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txt_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:singleLine="true"
            android:drawableStart="@drawable/ic_user" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingLeft="200dp"
        android:paddingRight="200dp"
        android:singleLine="true"
        android:layout_marginBottom="8dp"
        android:hint="@string/lbl_password"
        android:textColorHint="@android:color/black">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:singleLine="true"
            android:drawableStart="@drawable/ic_key" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="200dp"
        android:layout_marginRight="200dp"
        android:textSize="22sp"
        android:textAllCaps="false"
        android:text="@string/login" />

    <TextView
        android:id="@+id/txt_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"/>

</LinearLayout>