<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:layout_margin="1dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:id="@+id/children_linearlayout"
        android:background="@color/yellow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5">

        <TextView
            android:id="@+id/txt_warehouse_id"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_gravity="center"
            android:textSize="27sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/warehouse_id" />

        <TextView
            android:id="@+id/txt_warehouse_name"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_gravity="center"
            android:textSize="27sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/warehouse_name" />

        <TextView
            android:id="@+id/txt_stock_code"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_gravity="center"
            android:textSize="27sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/warehouse_location" />
    </LinearLayout>

</androidx.cardview.widget.CardView>