<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:id="@+id/main_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/center_linear_layout"
            android:background="@color/shape_edge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4">

            <ImageView
                android:id="@+id/arrow_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/arrowdown"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                />

            <TextView
                android:id="@+id/txt_center_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_gravity="center"
                android:textSize="27sp"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/center_id" />

            <TextView
                android:id="@+id/txt_center_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_gravity="center"
                android:textSize="27sp"
                android:gravity="center"
                android:layout_weight="3"
                android:text="@string/center_name" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/expandable_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/children_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>